--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Windows/test.exe"
+export_path="export/Windows/CultManor.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -77,7 +77,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Linux/test"
+export_path="export/Linux/CultManor"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
